Create two more recipes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/simply-guacamole.html">Simply Guacamole</a></li>
+        <li><a href="recipes/lemon-herb-chicken">Lemon Herb Chicken</a></li>
+    </ul>
     </body>
 </html>
