--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,11 +1,19 @@
-<h1>Lasagna: A Classic Italian Comfort Food</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lasagna recipe</title>
+</head>
+<body>
+    <h1>Lasagna: A Classic Italian Comfort Food</h1>
 <img src="../media/pexels-anna-guerrero-788383-4079520.jpg" alt="A dish of delicious Lasagna" width="800px" height="533px" />
 <h2>Description</h2>
 <p>Lasagna is a beloved Italian dish that features layers of wide, flat pasta sheets generously filled with savory goodness. Traditionally, it's a rich and satisfying casserole built with a hearty ragù (meat sauce), creamy béchamel sauce, melty cheeses, and sometimes vegetables.</p>
 <p>This recipe will guide you through creating a perfect lasagna, from the simmering ragù to the bubbling, golden-brown top.  Imagine cutting into a slice and revealing tender pasta layered with flavorful sauce, cheesy goodness stretching between the bites. It's a perfect dish for feeding a crowd, a cozy family dinner, or a celebratory meal.</p>
 <p>Lasagna is not only delicious but also endlessly customizable. Feel free to explore variations with different cheeses, vegetables, or even a white sauce instead of the classic ragù.  No matter your preference, this recipe provides a foundational lasagna experience you can build upon and make your own.</p>
 <h2>Ingredients</h2>
-<h3>For the Ragù (Meat Sauce):</h3>
+<h2>For the Ragù (Meat Sauce):</h2>
 <ul>
     <li>Ground beef or Italian sausage (or a combination)</li>
     <li>Onion, diced</li>
@@ -19,7 +27,7 @@
     <li>Olive oil</li>
     <li>Salt and pepper</li>
 </ul>
-<h3>For the Béchamel Sauce (Optional):</h3>
+<h2>For the Béchamel Sauce (Optional):</h2>
  <ul>
     <li>Butter</li>
     <li>All-purpose flour</li>
@@ -27,7 +35,7 @@
     <li>Nutmeg</li>
     <li>Salt and pepper</li>
 </ul>   
-<h3>For the Assembly:</h3>
+<h2>For the Assembly:</h2>
 <ul>
     <li>Lasagna noodles (no-cook or pre-cooked)</li>
     <li>Ricotta cheese</li>
@@ -68,3 +76,5 @@
         Remove foil and bake for an additional 15-20 minutes, or until the top is golden brown and bubbly.
         Let the lasagna cool slightly before cutting into slices. Garnish with chopped fresh parsley (optional) and serve warm</li>
 </ol>
+</body>
+</html>
