--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/simply-guacamole.html">Simply Guacamole</a></li>
-        <li><a href="recipes/lemon-herb-chicken">Lemon Herb Chicken</a></li>
+        <li><a href="recipes/lemon-herb-chicken.html">Lemon Herb Chicken</a></li>
     </ul>
     </body>
 </html>
